Add fci module based on alpha and beta strings

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ doc/*.log
 doc/*.out
 grassmann/testing.log
 grassmann/test/inputs_outputs/*/*min_dist*
+src/wave_functions/strings_rev_lexical_order.c
+src/wave_functions/strings_rev_lexical_order.cpython-37m-x86_64-linux-gnu.so
+src/wave_functions/strings_rev_lexical_order.html
