--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 doc/*.aux
 doc/*.log
 doc/*.out
+doc/grassmann_doc.toc
 grassmann/testing.log
 grassmann/test/inputs_outputs/*/*min_dist*
 src/wave_functions/strings_rev_lexical_order.c
