--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ doc/*.aux
 doc/*.log
 doc/*.out
 doc/grassmann_doc.toc
+doc/grassmann_doc.pdf
 grassmann/testing.log
 grassmann/test/inputs_outputs/*/*min_dist*
 src/wave_functions/strings_rev_lexical_order.c
