Adds some core methods for mind dist to CC manifold
These methods are mainly at wave_functions/manifold.pyx.
The code compiles, but no tests had been performed
The full method still does not work: transforming CC to FCI
if not implemented yet

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ grassmann/test/inputs_outputs/*/*min_dist*
 src/wave_functions/strings_rev_lexical_order.c
 src/wave_functions/strings_rev_lexical_order.cpython-37m-x86_64-linux-gnu.so
 src/wave_functions/strings_rev_lexical_order.html
+src/coupled_cluster/manifold.c
+src/coupled_cluster/manifold.cpython-37m-x86_64-linux-gnu.so
+src/coupled_cluster/manifold.html
