Add (still broken) support for full Hessian in minDist to CC
This commit adds the calculation of the full hessian of the
function "distance to the CC manifold", to be used in the Newton
optimisation.
All terms have been included, but the implementation is still broken,
with a numbe of tests failing.

Known issues:
- FCIWaveFunction.get_coefficients_from_int_norm_wf cannot
  handle the correct sign for double excitations
  (raises NotImplementedError)

- Numeric Jacobian is not being calculated correctly,
  with different values for J_{ia} and -J_{ai}
  (tests.implementation.test_cc_manifold.CheckNumAnalJacTestCase)

More tests are needed!!

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,6 @@ doc/*.out
 doc/grassmann_doc.toc
 doc/grassmann_doc.pdf
 grassmann/test/inputs_outputs/*/*min_dist*
-src/*/*.c
-src/*/*.so
-src/*/*.html
+*/*/*.c
+*/*/*.so
+*/*/*.html
