Put lib/recipes into a tar file

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ grassmann/test/inputs_outputs/*/*min_dist*
 */*/*.html
 */*/*~
 */*/.nfs*
+lib/recipes_2.dat
+lib/recipes_3.dat
+lib/recipes_5.dat
+lib/recipes_4.dat
+lib/recipes_6.dat
+lib/recipes_7.dat
+lib/recipes_8.dat
+lib/README
